--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "firebase": "^6.3.5",
+    "jwt-decode": "^2.2.0",
     "vee-validate": "^2.2.14",
     "vue": "^2.5.2",
+    "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.5",
+    "vuetify-loader": "^1.3.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -40,7 +44,9 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "deepmerge": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
+    "fibers": "^4.0.1",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
@@ -57,7 +63,7 @@
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
     "sass": "^1.22.9",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.2.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
