--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vee-validate": "^2.2.14",
     "vue": "^2.5.2",
     "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.1",
     "vuetify": "^2.0.5",
     "vuetify-loader": "^1.3.0",
