--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.1",
+    "vue2-editor": "^2.10.2",
     "vuetify": "^2.0.5",
     "vuetify-loader": "^1.3.0",
     "vuex": "^3.1.1"
